# BrandList

./: Brands-A.xlsx  Brands-B.xlsx  Brands-C.xlsx  Brands-D.xlsx  Brands-E.xlsx  Brands-F.xlsx  Brands-G.xlsx  Brands-H.xlsx  Brands-I.xlsx  Brands-J.xlsx  Brands-K.xlsx  Brands-L.xlsx  Brands-M.xlsx  Brands-N.xlsx  Brands-O.xlsx  Brands-P.xlsx  Brands-Q.xlsx  Brands-R.xlsx  Brands-S.xlsx  Brands-T.xlsx  Brands-U.xlsx  Brands-V.xlsx  Brands-W.xlsx  Brands-X.xlsx  Brands-Y.xlsx  Brands-Z.xlsx  Brands.xlsx  main.py  pyproject.toml
